<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/background"
	android:fitsSystemWindows="true"
    android:clipToPadding="false">
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:fadingEdge="none"
		android:scrollbars="none">

		<LinearLayout
			android:layout_height="fill_parent"
			android:layout_width="fill_parent"
			android:orientation="vertical">
			<LinearLayout
				android:id="@+id/abthemeLayout"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:orientation="vertical"
				android:background="@color/title">
			<ImageView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:layout_marginTop="@dimen/title_hidden"
				android:src="@drawable/about"
				android:layout_gravity="center"/>

			<TextView
				android:layout_height="wrap_content"
				android:text="@string/zdapp_ver"
				android:layout_width="fill_parent"
				android:gravity="center_horizontal"
				android:layout_marginTop="5dp"
				android:layout_marginBottom="20dp"
				android:textColor="@color/white"
				android:textSize="14sp"/>
			</LinearLayout>
				<Button
					android:id="@+id/abt_new"
					android:layout_width="fill_parent"
					android:layout_height="@dimen/btn_height"
					android:text="@string/checkNewVer"
					android:drawableRight="@drawable/into_arr"
					android:background="@drawable/bg_btn_options"
					android:gravity="left|center_vertical"
					android:textSize="16sp"
					android:textColor="@color/btn_ver_text"
					android:paddingLeft="10dp"
					android:paddingRight="10dp"/>
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="1dp"
					android:background="#dddddd"/>
				<Button
					android:id="@+id/abt_hist"
					android:layout_width="fill_parent"
					android:layout_height="@dimen/btn_height"
					android:text="@string/history"
					android:drawableRight="@drawable/into_arr"
					android:background="@drawable/bg_btn_options"
					android:gravity="left|center_vertical"
					android:textSize="16sp"
					android:textColor="@color/btn_ver_text"
					android:paddingLeft="10dp"
					android:paddingRight="10dp"/>
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="1dp"
					android:background="#dddddd"/>
				<Button
					android:id="@+id/abt_abt"
					android:layout_width="fill_parent"
					android:layout_height="@dimen/btn_height"
					android:text="@string/abt"
					android:drawableRight="@drawable/into_arr"
					android:background="@drawable/bg_btn_options"
					android:gravity="left|center_vertical"
					android:textSize="16sp"
					android:textColor="@color/btn_ver_text"
					android:paddingLeft="10dp"
					android:paddingRight="10dp"/>
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="1dp"
					android:background="#dddddd"/>

				<Button
					android:id="@+id/abt_welcome"
					android:layout_width="fill_parent"
					android:layout_height="@dimen/btn_height"
					android:text="@string/welcomepage"
					android:drawableRight="@drawable/into_arr"
					android:background="@drawable/bg_btn_options"
					android:gravity="left|center_vertical"
					android:textSize="16sp"
					android:textColor="@color/btn_ver_text"
					android:paddingLeft="10dp"
					android:paddingRight="10dp"/>
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="1dp"
					android:background="#dddddd"/>
				<Button
					android:id="@+id/abt_vbea"
					android:layout_width="fill_parent"
					android:layout_height="@dimen/btn_height"
					android:text="@string/vbea_lx"
					android:drawableRight="@drawable/into_arr"
					android:background="@drawable/bg_btn_options"
					android:gravity="left|center_vertical"
					android:textSize="16sp"
					android:textColor="@color/btn_ver_text"
					android:paddingLeft="10dp"
					android:paddingRight="10dp"/>

			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:layout_marginTop="5dp"
				android:text="@string/vbea_Copyright"
				android:textSize="12sp"
				android:textColor="@color/grey"/>

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:gravity="center"
				android:orientation="horizontal">
				<Button
					android:id="@+id/abt_web"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/myweb"
					android:background="@drawable/selector"
					android:gravity="center"
					android:textSize="12sp"
					android:textColor="@color/webview_text"/>
				<Button
					android:id="@+id/abt_t"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/mymblog"
					android:background="@drawable/selector"
					android:gravity="center"
					android:textSize="12sp"
					android:textColor="@color/webview_text"/>
				<Button
					android:id="@+id/abt_syxy"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:background="@drawable/selector"
					android:textColor="@color/webview_text"
					android:text="@string/syxy"
					android:textSize="12sp"/>
			</LinearLayout>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:layout_marginTop="0dp"
				android:text="@string/vbea_copy"
				android:textSize="11sp"
				android:textColor="@color/gray"/>
		</LinearLayout>

	</ScrollView>
	<LinearLayout
		android:id="@+id/themeLayout"
		android:layout_width="fill_parent"
		android:layout_height="@dimen/title_height"
		android:layout_alignParentTop="true"
		android:gravity="right"
		android:orientation="horizontal"
		android:background="@null">

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_icon"
			android:layout_gravity="center_vertical"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:gravity="left|center_vertical"
			android:text="@string/about"
			android:textColor="#Ffffff"
			android:textSize="22sp"
			android:layout_weight="1.0"
			android:paddingLeft="10dp"
			android:layout_gravity="center_vertical"/>

		<ImageButton
			android:id="@+id/btn_close"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/bg_btn_close"
			android:layout_gravity="right|center_vertical"
			android:gravity="right"
			android:background="@null"
			android:adjustViewBounds="true"
			android:paddingRight="10dp"/>

	</LinearLayout>
	
</RelativeLayout>

