<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:scrollbars="none">
<LinearLayout
	android:layout_height="wrap_content"
	android:layout_width="fill_parent"
	android:gravity="left|center_horizontal"
	android:paddingLeft="20dp"
	android:paddingRight="20dp"
	android:orientation="vertical">

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:orientation="vertical">

		<TableRow
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_marginTop="10dp">
			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textSize="14sp"
				android:textColor="@color/black"
				android:text="@string/prop_name"/>
			<TextView
				android:id="@+id/fileattr_name"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textSize="14sp"
				android:textColor="@color/grey1"
				android:text="xxxxxxxxx"/>
		</TableRow>

		<TableRow
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_marginTop="10dp">
			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textSize="14sp"
				android:textColor="@color/black"
				android:text="@string/prop_loca"/>
			<TextView
				android:id="@+id/fileattr_path"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textSize="14sp"
				android:textColor="@color/grey1"
				android:text="\xxxx\xxxxx"/>
		</TableRow>
		
		<TableRow
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_marginTop="10dp">
			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textSize="14sp"
				android:textColor="@color/black"
				android:text="@string/prop_auth"/>
			<TextView
				android:id="@+id/fileattr_attr"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:textSize="14sp"
				android:textColor="@color/grey1"
				android:text="rwxrwxrwx"/>
		</TableRow>

		<TableRow
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_marginTop="10dp">
			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textSize="14sp"
				android:textColor="@color/black"
				android:text="@string/prop_size"/>
			<TextView
				android:id="@+id/fileattr_size"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textSize="14sp"
				android:textColor="@color/grey1"
				android:text="@string/prop_calcul"/>
		</TableRow>

		<TableRow
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_marginTop="10dp">
			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textSize="14sp"
				android:textColor="@color/black"
				android:text="@string/prop_time"/>
			<TextView
				android:id="@+id/fileattr_time"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textSize="14sp"
				android:textColor="@color/grey1"
				android:text="1999-12-01 12:00:00"/>
		</TableRow>
		
		<TableRow
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_marginTop="10dp">
			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textSize="14sp"
				android:textColor="@color/black"
				android:text="@string/prop_owner"/>
			<TextView
				android:id="@+id/fileattr_owner"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:textSize="14sp"
				android:textColor="@color/grey1"
				android:text="root"/>
		</TableRow>
		
		<TableRow
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_marginTop="10dp">
			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textSize="14sp"
				android:textColor="@color/black"
				android:text="@string/prop_group"/>
			<TextView
				android:id="@+id/fileattr_user"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:textSize="14sp"
				android:textColor="@color/grey1"
				android:text="root"/>
		</TableRow>
		
		<TableRow
			android:id="@+id/file_title_mime"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_marginTop="10dp">
			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textSize="14sp"
				android:textColor="@color/black"
				android:text="MIME："/>
			<TextView
				android:id="@+id/fileattr_type"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textSize="14sp"
				android:textColor="@color/grey1"
				android:text="mime/type"/>
		</TableRow>
		
		<TableRow
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_marginTop="10dp">
			<TextView
				android:id="@+id/fileattr_md5t"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textSize="14sp"
				android:textColor="@color/black"
				android:text="MD5："/>
			<TextView
				android:id="@+id/fileattr_md5"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textSize="14sp"
				android:textColor="@color/grey1"
				android:text="@string/prop_calcul"/>
		</TableRow>
		
		<TableRow
			android:id="@+id/file_title_sha1"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_marginTop="10dp">
			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textSize="14sp"
				android:textColor="@color/black"
				android:text="SHA1："/>
			<TextView
				android:id="@+id/fileattr_sha1"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textSize="14sp"
				android:textColor="@color/grey1"
				android:text="@string/prop_calcul"/>
		</TableRow>

		<TableRow
			android:id="@+id/file_title_linkl"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_marginTop="10dp">
			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textSize="14sp"
				android:textColor="@color/black"
				android:text="@string/prop_linkto"/>
			<TextView
				android:id="@+id/fileattr_linkto"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textSize="14sp"
				android:textColor="@color/grey1"
				android:text="/"/>
		</TableRow>
	</LinearLayout>
</LinearLayout>
</ScrollView>

