<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:padding="10dp"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/hours"
            android:textColor="@color/black"
            android:textSize="18sp"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/minutes"
            android:textColor="@color/black"
            android:textSize="18sp"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/seconds"
            android:textColor="@color/black"
            android:textSize="18sp"/>                 
    </LinearLayout>
    
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:background="#ffffff">
        <com.binxin.zdapp.wheel.WheelView
			android:id="@+id/hourwheel"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"/> 
        <com.binxin.zdapp.wheel.WheelView
			android:id="@+id/minutewheel"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"/> 
        <com.binxin.zdapp.wheel.WheelView
			android:id="@+id/secondwheel"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"/>              
    </LinearLayout>
</LinearLayout>
